feat(certificate): 证书后端完整实现 — Entity/Repository/Service/Controller + OpenPDF生成证书PDF